// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-dkHyXG bzomGL"
>
  <div
    class="sc-eDgayY gAheXB"
  >
    <span
      class="sc-jTkTEj"
    >
      0
    </span>
    <span
      class="sc-gLfKCG cRxHuG"
    >
      42
    </span>
  </div>
  <button
    class="sc-bcHOTY sc-gsMHZj etVWCg jZqkRj"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-dkHyXG bzomGL"
>
  <div
    class="sc-hLljAB iLrvoK"
  >
    🛌🛌
  </div>
  <button
    class="sc-bcHOTY sc-gsMHZj giMMzD jZqkRj"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-dkHyXG bzomGL"
>
  <div
    class="sc-hLljAB iLrvoK"
  >
    🍅
  </div>
  <button
    class="sc-bcHOTY sc-gsMHZj giMMzD jZqkRj"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-dkHyXG bzomGL"
>
  <div
    class="sc-hLljAB iLrvoK"
  >
    🛌
  </div>
  <button
    class="sc-bcHOTY sc-gsMHZj giMMzD jZqkRj"
  >
    Start
  </button>
</div>
`;
